--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -20,6 +20,7 @@ $panel-primary-heading-bg: #1abc9c;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 10px;
+	padding: 40;
 }
 
 .navbar-brand {
