--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,14 +1,10 @@
 <div class='panel panel-primary center'>
 	<div class='panel-heading'>
-		<h1>Add a picture</h1>
+		<h1>Add a Picture</h1>
 	</div>
 	<div class='panel-body'>
 		<%= form_for @picture do |f| %>
 
-			<div class='form-group'>
-				<%= f.label 'artist' %>
-				<%= f.text_field 'artist', class: 'form-control' %>
-			</div>
 			<div class='form-group'>
 				<%= f.label 'title' %>
 				<%= f.text_field 'title', class: 'form-control' %>
