--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,16 +1,9 @@
 <p class=><%= link_to "Back", '/pictures', class: 'btn btn-primary btn-show' %></p>
 
+<%= render 'layouts/votes' %>
+
 <% if current_user.id == @picture.user_id %>
 <p class=><%= link_to "Delete", picture_path(@picture), method: :delete, class: 'btn btn-primary btn-delete' %></p>
 <% end %>	
 
-<div class='panel-deafult show-container'>
-	<div class='panel-body show-body'>
-		<%= image_tag(@picture[:url], class: 'images-show') %>
-	</div>
-
-	<div class='panel panel-body show-footer discription'>
-		<h2 class='show-title'><%= @picture.title %></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio voluptas cupiditate quibusdam magnam doloribus, nobis et mollitia minus aliquam vero fugiat atque temporibus a sit sed minima veniam itaque enim.</p>
-	</div>
-</div>
+<%= render 'layouts/comments' %>
