--- a/app/assets/stylesheets/pictures.css.scss
+++ b/app/assets/stylesheets/pictures.css.scss
@@ -130,3 +130,10 @@ h3 {
 .comment {
 	display: inline;
 }
+
+.vote {
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+}
