remove local images

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,10 +1,12 @@
 <div class='main'>
 	<% @pictures.each do |picture| %>
 		<div class='box panel panel-body'>
+			<div class='box-image'>
 			<a href="/pictures/<%= picture.id %>"/>
-				<%= image_tag(picture.url,class: 'images') %>
+				<%= image_tag(picture.url,class: 'images-index') %>
 			</a>
-			<div class='panel-footer center'>
+			</div>
+			<div class='box-footer panel-footer center'>
 				<h3><%= picture[:title] %></h3>
 				<p>Posted by: <%= User.find(picture.user_id).email %></p>
 			</div>
