--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 
 $navbar-default-bg: #1abc9c;
+$navbar-default-border: none;
+$navbar-default-border-radius: 0px;
 $navbar-default-link-color: #FFF;
 $btn-primary-bg: #1abc9c;
 $body-bg: #bdc3c7;
