--- a/app/assets/stylesheets/pictures.css.scss
+++ b/app/assets/stylesheets/pictures.css.scss
@@ -2,29 +2,67 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.images {
+.images-show {
 	width: 100%;
 	height: auto;
 }
 
+.images-index {
+	height: 100%;
+	width: auto;
+}
+
 .box {
 	width: 31%;
+	height: 412px;
 	margin: 10px;
+	margin-left: 17px;
 	float: left;
+	padding: 5px;
+	background-color: white;
+}
+
+.box-image {
+	width: 100%;
+	height: 300px;
+	overflow: hidden;
+}
+
+h3 {
+	margin-top: 10px;
+}
+
+.box-footer {
+	height: 100px;
+	background-color: #1abc9c;
+	border: 0px;
+	color: white;	
 }
 
 .main {
 	display: inline-block;
 }
 
-.show {
-	text-align: center;
-	width: auto;
-	margin-left: 300px;
-	margin-right: 300px;
-	margin-bottom: 0px;
+.show-body {
+	width:100%;
+	margin-left: auto;
+	margin-right: auto;	
+	padding: 0px;
 }
 
+.show-container {
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0px;
+}
+.show-footer {
+	text-align: center;
+	margin-bottom: 0px;
+	width:100%;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .submittal {
 	float: right;
@@ -33,6 +71,7 @@
 .btn-show {
 	float:left;	
 	margin-left: 20px;
+	border: 0px;
 }
 
 .main-btn {
@@ -43,4 +82,24 @@
 .btn-delete {
 	float:right;
 	margin-right: 20px;
+}
+
+.btn-edit {
+	float: left;
+}
+
+.show-title {
+	margin-top: 0px;
+	font-size: 30px;
+}
+
+.discription {
+	background-color: #1abc9c;
+	color: white;
+}
+
+.mypictures-footer {
+	background-color: #bdc3c7;
+	height: 100px;
+	border: 0px;
 }
