--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
     </div>
       <ul class="nav navbar-nav navbar-right">
       	<% if user_signed_in? %>
+        <li><%= link_to "My Pictures", pictures_mypictures_url %></li>
       	<li><%= link_to "All Pictures", pictures_url %></li>
       	<li><%= link_to "Upload Picture", new_picture_url %></li>
         <li><%= link_to "Account Settings",edit_user_registration_url %></li>
