--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -2,10 +2,10 @@
 
 <div class='panel panel-primary center'>
 	<div class='panel-heading'>
-		<h1>Add a Picture</h1>
+		<h1>Edit Picture</h1>
 	</div>
 	<div class='panel-body'>
-		<%= form_for @picture do |f| %>
+		<%= form_for(@picture, url: "/pictures/#{@picture.id}", method: :patch) do |f| %>
 
 			<div class='form-group'>
 				<%= f.label 'title' %>
